syntax = "proto3";

package user_query;
option go_package="github.com/wuyazi/grpc_user_query/user_query";
//import "github.com/wuyazi/grpc_user_domain/event.proto";

message getByUserIdReq {
    int64 userId = 1;
}

// service
message userResp {
    int64 userId = 1;
    string nickname = 2;
    int64 age = 3;
    string gender = 4;
}

service userQuery {
//    rpc insertUser(user_domain.UserCreated) returns(userResp);
    rpc getByUserId(getByUserIdReq) returns(userResp);
}
